--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -23,11 +23,9 @@ body {
 	background-attachment: fixed;
 	background-color: var(--color-bg-1);
 	background-size: 100vw 100vh;
-	background-image: radial-gradient(
-			50% 50% at 50% 50%,
+	background-image: radial-gradient(50% 50% at 50% 50%,
 			rgba(255, 255, 255, 0.75) 0%,
-			rgba(255, 255, 255, 0) 100%
-		),
+			rgba(255, 255, 255, 0) 100%),
 		linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
 }
 
@@ -51,15 +49,29 @@ a:hover {
 }
 
 h1 {
-	font-size: 2rem;
-	text-align: center;
+	width: 461px;
+	height: 144px;
+
+	font-family: 'Poppins';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 96px;
+	line-height: 144px;
+
+	letter-spacing: -0.015em;
+
+	color: #000000;
+
+	flex: none;
+	order: 0;
+	flex-grow: 0;
 }
 
-h2{
+h2 {
 	font-style: normal;
 	font-weight: 700;
 	font-size: 60px;
-	line-height: 90px;	
+	line-height: 90px;
 	margin-block-start: 0;
 	margin-block-end: 0;
 
@@ -71,7 +83,7 @@ h2{
 	flex: none;
 	order: 0;
 	flex-grow: 0;
-	}
+}
 
 pre {
 	font-size: 16px;
@@ -121,7 +133,7 @@ button:focus:not(:focus-visible) {
 	white-space: nowrap;
 }
 
-.body1{
+.body1 {
 	font-style: normal;
 	font-size: 16px;
 	line-height: 24px;
@@ -133,4 +145,103 @@ button:focus:not(:focus-visible) {
 	flex: none;
 	order: 1;
 	flex-grow: 0;
+}
+
+h3 {
+	font-weight: 700;
+	font-size: 40px;
+	line-height: 60px;
+
+	color: #000000;
+}
+
+h4 {
+	font-weight: 700;
+	font-size: 34px;
+	line-height: 51px;
+
+	letter-spacing: 0.0025em;
+
+	color: #000000;
+}
+
+h5 {
+	font-weight: 300;
+	font-size: 24px;
+	line-height: 36px;
+
+	color: #000000;
+}
+
+h6 {
+	font-weight: 600;
+	font-size: 20px;
+	line-height: 30px;
+
+	letter-spacing: 0.0015em;
+
+	color: #000000;
+}
+
+sub {
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 24px;
+
+	letter-spacing: 0.0015em;
+
+	color: #000000;
+}
+
+.sub2 {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 21px;
+
+	letter-spacing: 0.001em;
+
+	color: #000000;
+}
+
+.body2 {
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 21px;
+
+	letter-spacing: 0.0025em;
+
+	color: #000000;
+}
+
+.button {
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 21px;
+
+	letter-spacing: 0.0125em;
+
+	color: #000000;
+
+}
+
+.caption {
+	font-style: italic;
+	font-weight: 300;
+	font-size: 12px;
+	line-height: 18px;
+
+	letter-spacing: 0.004em;
+
+	color: #000000;
+
+}
+
+.overline {
+	font-weight: 400;
+	font-size: 10px;
+	line-height: 15px;
+
+	letter-spacing: 0.015em;
+
+	color: #000000;
 }
