--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -17,12 +17,14 @@
 }
 
 body {
-	font-family: "Verdana";
+	font-family: 'Poppins';
+	font-style: normal;
 	min-height: 100vh;
 	margin: 0;
 	background-attachment: fixed;
 	background-color: #ffffff;
 	background-size: 100vw 100vh;
+	overflow-y: scroll;
 }
 
 h1,
@@ -147,8 +149,12 @@ h3 {
 	font-weight: 700;
 	font-size: 40px;
 	line-height: 60px;
-
+	margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 	color: #000000;
+
 }
 
 h4 {
@@ -165,7 +171,10 @@ h5 {
 	font-weight: 300;
 	font-size: 24px;
 	line-height: 36px;
-
+	margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 	color: #000000;
 }
 
