--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -183,7 +183,10 @@ h6 {
 	line-height: 30px;
 
 	letter-spacing: 0.0015em;
-
+	margin-block-start: 0em;
+	margin-block-end: 0em;
+	margin-inline-start: 0px;
+	margin-inline-end: 0px;
 	color: #000000;
 }
 
